src/index.css
/* Global Clears */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

ul {
  padding-left: 0;
}

/* Global Variables */
:root {
  --title-font: 'Lobster', cursive;
  --main-font: 'Roboto', sans-serif;
  --primary-color: #538eed;
  --secondary-color: #313033;
  --preview-sidebar-background-color: #e9ecf0;
  --font-size-preview-main: 14px;
  --font-size-preview-sidebar: 14px;
  --delete-button-color: #FFCC00;
  --delete-button-color-hover: #c91002;
  --add-buttton-color: #5cbd02;
}

/* Global classes */
.font-color {
  color: var(--primary-color);
}

/* Body */
body {
  background-color: var(--secondary-color);
}



/* Header */

#header {
  padding:2rem 0;
}

#main-title {
  font-family: var(--title-font);
  font-size: 4rem;
  color: var(--primary-color);
  text-align: left;
}

/* Main Containers */
.main-container {
  width: 80vw;
  margin: auto;
}

.container-row {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  background-color: #fff;
}

.container-col {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.container-col > div {
  width: 100%;
}

.background{
  background-color: #c6c8cc;
  padding-top: 2rem;
}



/* INFORMATION ENTER SCREEN */

#information-enter-screen {
  /* border: var(--primary-color) 2px solid; */
  /* border-radius: 5px; */
  background-color: var(--preview-sidebar-background-color);
  /* box-shadow: 2px 2px var(--secondary-color); */
  width: 100%;
  padding: 1rem;
  margin-right: 1rem;
}

::placeholder {
  color: #fff;
  opacity: 0.6;
  font-size: 16px;
}

input {
  width: 100%;
  border-radius: 5px;
  margin-bottom: 0.5rem;
  height: 2rem;
  font-family: var(--main-font);
  font-size: 16px;
  background-color: var(--secondary-color);
  color: #fff;
}

textarea {
  
  width: 100%;
  border-radius: 5px;
  margin-bottom: 0.5rem;
  height:6rem;
  font-family: var(--main-font);
  font-size: 16px;
  background-color: var(--secondary-color);
  color: #fff;
}


.educationInformation > div, .workInformation > div, .projectInformation > div, #general-information > div, #technical-skills, .objectiveInformation {
  border: var(--secondary-color) 2px solid;
  border-radius: 10px;
  padding: 0.5rem;
  margin-bottom: 1rem;
}


/* Information Enter Heading Styling */

.enter-information-heading {
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  color: var(--primary-color);
  font-family: var(--main-font);
}

.enter-information-heading:not(:first-child){
  margin-top:1rem;
}

/* Large Delete Button */

.delete-btn-large {
  width: 100%;
  background-color: var(--delete-button-color);
  border-radius: 5px;
  height: 2rem;
  color: #fff;
  font-size: 1.2rem;
  margin-bottom: 1rem;
}

.delete-btn-large:hover {
  font-size: 1.5rem;
  cursor: pointer;
  background-color: var(--delete-button-color-hover);
}


/* Large Add Button */

.add-btn-large {
  width: 100%;
  background-color: var(--add-buttton-color);
  border-radius: 5px;
  height: 2rem;
  color: #fff;
  font-size: 1.2rem;
}

.add-btn-large:hover {
  font-size: 1.5rem;
  cursor: pointer;
}

/* Description Fields */
.description-style {
  display: flex;
  flex-direction: row;

}

.description-style > button {
  width: 2rem;
  height: 2rem;
  border: none;
  color: var(--delete-button-color-hover);
  cursor: pointer;
}


div > .description-style {
  border: none;
  padding: 0 0 0 0.5rem;
  margin-bottom: 0;
}

/* Small Add Button */

.add-btn-small {
  border: none;
  font-size: 1.5rem;
  cursor: pointer;
  color: var(--add-buttton-color);
  float: right;
  margin-bottom: 1rem;
}

#added-skills {
  clear: both; /*Needed to clear as used float in the previous style*/
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 1rem;
}  

/* Techincal Skills */

#added-skills > .skill > button {
  margin-left: 0.5rem;
  background: none;
  border: none;
  color: var(--delete-button-color);
  cursor: pointer;
}


/* Reset Button */
.reset-btn {
  margin-top: 5rem;
  width: 100%;
  background-color: #c91002;
  border-radius: 5px;
  height: 2rem;
  font-size: 1.2rem;
  cursor: pointer;
  color: white;
}

.reset-btn:hover {
  font-size: 1.5rem;
}


/* Example Resume Button */

#example-resume-btn > button{
  width: 100%;
  background-color: black;
  border-radius: 5px;
  height: 2rem;
  color: #fff;
  font-size: 1.2rem;
  margin-top: 1rem;
}


#example-resume-btn > button:hover{
  background-color: white;
  color: black;
  cursor: pointer;
}

/* Save to PDF Button */
#save-to-pdf > button {
  width: 100%;
  background-color: var(--secondary-color);
  border-radius: 5px;
  height: 2rem;
  color: #fff;
  font-size: 1.2rem;
  margin-top: 1rem;
}

#save-to-pdf > button:hover{
  background-color: var(--primary-color);
  color: #fff;
  cursor: pointer;
}


/* PREVIEW SCREEN */

#preview-screen {
  position: sticky;
  top: 0;
  border: 2px solid var(--primary-color);
}

/* Preview Container */
#preview-container {
  padding: 0 0.7rem;
  height: 11in; 
  font-family: var(--main-font);
  color: var(--secondary-color);
  width: 8.5in;
  overflow: hidden;

}



/* Preview Sidebar */
#preview-sidebar {
  min-width: 35%;
  max-width: 35%;
  height: 100%;
  padding: 1rem 0.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  background-color: var(--preview-sidebar-background-color);
  font-size: var(--font-size-preview-sidebar);
}


/* Preview General */

.info-icon{
  display: inline;
  margin-right: 0.4rem;
}

#preview-general > div {
  margin-top: 1rem;
}

#preview-general > .prof-designation {
  text-align: left;
  font-size: 1rem;
  margin-top: 0;
}

#preview-general > .name {
  font-size: 2rem;
  font-family: 'Roboto', sans-serif;
}

#preview-general > .phone .email .git-hub {
  margin: 2rem 0 0 1rem;
}


/* Techincal Skills */
#preview-skills {
  width: 100%;
}
.preview-sidebar-heading {
  text-align: left;
  font-size: 1.5rem;
  border-bottom: 1px solid var(--secondary-color);
  line-height: 0.1rem;
}

.preview-sidebar-heading > span {
  background-color: var(--preview-sidebar-background-color);
}

#skills {
  margin-top: 1.5rem;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.skill {
  border: 2px solid var(--secondary-color);
  display: inline;
  padding: 0.25rem;
  border-radius: 5px;
  background-color: var(--primary-color);
  color: #fff;
  margin: 0 0.5rem 0.5rem 0;
  font-family: var(--main-font);
}


/* Education */

#preview-education{
  width: 100%;
}

#education {
  margin-top: 1.5rem;
}

.education-entry {
  margin-top: 1rem;
}


/* Preview Main */
#preview-main {
  height: 100%;
  width: 100%;
  padding: 1rem 1.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  font-size: var(--font-size-preview-main)
}

#preview-main > div {
  margin-top: 0.8rem;
}

.preview-main-heading {
  text-align: left;
  font-size: 1.25rem;
  font-weight: 800;
  margin-bottom: 1rem;
}

.preview-heading-color {
  color: var(--primary-color);
}


/* Objective */
#preview-objective {
 text-align: left;
 margin-top:1rem;
 width: 100%;
 text-align: justify;
}

/* Work Experience */
#preview-work-experience{
  text-align: left;
  width: 100%;
  text-align: justify;
}

.grid-display {
  display: grid;
  grid-template-columns: 1fr 4fr 3fr;
  column-gap: 1rem;
  margin-bottom: 1rem;
}

.preview-description {
  grid-column-start: 2;
  grid-column-end: 4;
}

.preview-small-heading {
  font-weight: 800;
}

.preview-company {
  font-size: 0.8rem;
  text-align: right;
}

/* Project Experience */
#preview-project-experience {
  text-align: left;
  width: 100%;
  text-align: justify;
}

.preview-date {
  height: 2rem;
}





/* Media Queries */

@media all and (max-width:1500px){

  .main-container {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  #main-title {
    text-align: center;
  }

  #preview-screen {
    margin-left: 1.5rem;
  }

  #information-enter-screen {
    margin-right: 0;
  }

  .hide {
    display: none;
  }

}

